[gd_scene load_steps=22 format=2]

[ext_resource path="res://RootVeg.gd" type="Script" id=1]
[ext_resource path="res://Sprites/beet5.png" type="Texture" id=2]
[ext_resource path="res://Sprites/beet1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/beet2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/beet4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/beet3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/carrot3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/potato4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/potato1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/carrot1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/carrot2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/potato6.png" type="Texture" id=12]
[ext_resource path="res://Sprites/potato3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/potato2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/potato5.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 9.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=5]
height = 24.0

[sub_resource type="CircleShape2D" id=6]
radius = 14.0

[node name="RootVeg" type="RigidBody2D" groups=["mobs"]]
collision_layer = 6
collision_mask = 6
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Beet" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Carrot" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Potato" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="BeetCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true

[node name="CarrotCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 5 )
disabled = true

[node name="PotatoCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 6 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.38419e-07, 1 )
scale = Vector2( 0.7, 0.75 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
